# pianito

./: Cargo.toml  LICENSE  README.md  SPEC.md  TEST_COVERAGE_REPORT.md  TEST_IMPLEMENTATION_SUMMARY.md  TODO.md
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
src/audio/: capture.rs  mod.rs  pitch.rs  reference.rs  traits.rs
src/tuning/: mod.rs  notes.rs  order.rs  profile.rs  session.rs  stretch.rs  temperament.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: instructions.rs  meter.rs  mod.rs  piano.rs  progress.rs
src/ui/screens/: calibration.rs  complete.rs  mod.rs  mode_select.rs  profiling.rs  tuning.rs
