[package]
name = "pianito"
version = "0.1.0"
edition = "2021"
description = "CLI piano tuner with guided coaching and real-time visual feedback"
license = "MIT"

[dependencies]
# Audio I/O
cpal = "0.15"
dasp = { version = "0.11", features = ["signal", "ring_buffer"] }
rustfft = "6.2"
hound = "3.5"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
directories = "5"
anyhow = "1.0"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
approx = "0.5"
